fix layout issues

--- a/0x03-responsive_design/02-1-styles.css
+++ b/0x03-responsive_design/02-1-styles.css
@@ -170,8 +170,8 @@
   
   .visually-hidden:not(:focus):not(:active) {
     position: absolute !important;
-    height: 1px;
-    width: 1px;
+    height: 100%;
+    width: auto;
     overflow: hidden;
     clip: rect(1px, 1px, 1px, 1px);
     white-space: nowrap;
@@ -190,7 +190,7 @@
   
   /* Grid
       ============================= */
-  
+
   ul.row {
     margin: -1rem;
     padding: 0;
@@ -211,6 +211,25 @@
   
   .col-1-2 {
     width: calc((100% / 2) - 2rem);
+  }
+
+  @media screen and (max-width: 767px) {
+    :root {
+      --section-padding: 5rem 1.5rem;
+      --section-body-padding: 2rem 0 0;
+    }
+    ul.row,
+    .row {
+      flex-direction: column;
+      margin: 0;
+    }
+    [class^="col-"] {
+      margin: 0 0 3rem 0;
+    }
+    .col-1-2,
+    .col-1-3 {
+      width: 100%;
+    }
   }
   
   /* Navbar
@@ -260,6 +279,12 @@
   .nav .nav-item:hover .nav-link::before {
     background-color: var(--color-primary);
     width: 100%;
+  }
+
+  @media screen and (max-width: 767px) {
+    .navbar-menu {
+      display: none;
+    }
   }
   
   /* Header
@@ -398,6 +423,12 @@
   
   .section-latest-news .row {
     flex-direction: row-reverse;
+  }
+
+  @media (max-width: 767px) {
+    .section-latest-news .row {
+      flex-direction: column;
+    }
   }
   
   /* Section SERVICES
